hphp/hack/test/typecheck/expression_trees/instance_method_call.php.exp
File "instance_method_call.php", line 13, characters 5-13:
Unsupported expression tree syntax. (Parsing[1002])
